--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.31",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.2.2",
     "vite": "^6.3.5",
